# Genesis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.lock.txt
docs/: GENESIS_Preparation_Roadmap_v2.md  Project_GENESIS_Research_Proposal_v2.md
genesis/: __init__.py  bench.py  config.py  env.py  generate.py  network.py  ppo.py  primitives.py  render.py  rollout.py  state.py  train.py
tests/: test_env.py  test_primitives.py
