[project]
name = "genesis"
version = "0.1.0"
description = "GENESIS — search-algorithm-discovery via a PPO controller over 13 atomic primitives under a PAIRED adversarial curriculum (2D phase)."
requires-python = ">=3.12"
# Runtime deps are pinned in requirements.lock.txt and installed into .venv by setup_wsl.sh.
# We intentionally do not re-declare them here to avoid drift with the locked, GPU-verified set.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["genesis"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = import sorting, UP = pyupgrade, B = bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
